--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./server/index.js",
-    "live-reload": "nodemon ./server/index.js"
+    "live-reload": "nodemon ./server/index.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --no-cache",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --no-cache --watchAll",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --no-cache --coverage tests/unit"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,7 @@
   },
   "homepage": "https://github.com/heviane/spotify-audio#readme",
   "devDependencies": {
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
