--- a/class02/package.json
+++ b/class02/package.json
@@ -7,13 +7,18 @@
     "node": "17"
   },
   "main": "index.js",
-  "scripts": {
+  "scripts": { 
     "start": "node ./server/index.js",
     "live-reload": "nodemon ./server/index.js",
     "test": "LOG_DISABLED=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache",
     "test:watch": "LOG_DISABLED=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache --watchAll",
     "test:coverage": "LOG_DISABLED=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache --coverage tests/unit",
-    "live-reload:docker": "sudo docker-compose up live-reload"
+    "test:e2e": "LOG_DISABLED=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache tests/e2e",
+    
+    "live-reload:docker": "sudo docker-compose up live-reload",
+    "test:docker": "sudo docker-compose up test",
+    "test:watch:docker": "sudo docker-compose up test-watch",
+    "test:coverage:docker": "sudo docker-compose up test-coverage"
   },
   "repository": {
     "type": "git",
@@ -31,7 +36,9 @@
   "homepage": "https://github.com/heviane/spotify-audio#readme",
   "devDependencies": {
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "portfinder": "^1.0.28",
+    "supertest": "^6.2.2"
   },
   "dependencies": {
     "pino": "^7.8.0",
