--- a/class02/package.json
+++ b/class02/package.json
@@ -7,15 +7,14 @@
     "node": "17"
   },
   "main": "index.js",
-  "scripts": { 
+  "scripts": {
     "start": "node ./server/index.js",
     "live-reload": "nodemon ./server/index.js",
     "test": "LOG_DISABLED=true NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest --no-cache",
     "test:watch": "LOG_DISABLED=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache --watchAll",
     "test:coverage": "LOG_DISABLED=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache --coverage tests/unit",
     "test:e2e": "LOG_DISABLED=true NODE_OPTIONS=--experimental-vm-modules jest --no-cache tests/e2e",
-    
-    "live-reload:docker": "sudo docker-compose up live-reload",
+    "live-reload:docker": "sudo docker-compose up --build live-reload",
     "test:docker": "sudo docker-compose up test",
     "test:watch:docker": "sudo docker-compose up test-watch",
     "test:coverage:docker": "sudo docker-compose up test-coverage"
